# platform

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  MARKET_SCAN_2026-05.md  PRODUCTS_KEEP_ALIVE.md  PRODUCTS_VISION.md  README.md  RESEARCH_AI_GOV_2026-06.md  VISION.md  amliq_brain_briefing.html  amliq_brain_decisions_and_narrative.md  amliq_brain_product_brief.md  decisive_plan_90day.html  decisive_plan_90day.md  finsavvyai-platform.code-workspace  finsavvyai_consolidation_plan_addendum.md  finsavvyai_full_extended_consolidation_plan.md  founder_decisions_memo.md  migration_status_check.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  products_ranking_may2026.html  products_ranking_may2026.md  stall_map.html  stall_map.md  tsconfig.base.json  vitest.config.ts
oss/automationhub/: AGENT_SYSTEM_GUIDE.md  AI_AGENT_NEXT_TASK.md  AI_AGENT_TODAY.md  AI_WORKDAY_PLAN.md  ANALYSIS_EXECUTIVE_SUMMARY.md  AUTOMATED_CHECKS_RESULTS.md  CLAUDE.md  CLEANUP_SUMMARY.md  CLOUDFLARE_DEPLOYMENT_SUMMARY.md  CODEBASE_ANALYSIS_COMPREHENSIVE.md  CODEOWNERS  CONTRIBUTING.md  DEMO_README.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PROGRESS.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_TEST_RESULTS.md  DEPLOYMENT_TROUBLESHOOTING.md  DEPLOY_NOW.md  DEVELOPMENT_PRIORITIES_SPEC.md  Dockerfile  Dockerfile.frontend  Dockerfile.prod  ENTERPRISE_QUICK_START.md  FINAL_PRODUCTION_STATUS.md  FIXES_APPLIED.md  FORKS.md  IMPLEMENTATION_STATUS.md  LICENSE  MIGRATION_NOTES.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_IMPROVEMENTS_SUMMARY.md  PRODUCTION_READINESS.md  (+80 more)
oss/automationhub/backend/: CLOUDFLARE_INTEGRATION_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MULTI_CLOUD_ORCHESTRATION_SUMMARY.md  alembic.ini  create_persistence_tables.py  demo_performance_optimization.py  demo_user_guide.py  demo_workflow_functionality.py  final_functionality_test.py  fix_imports.py  install_dependencies.sh  pytest.ini  requirements-optional.txt  requirements.txt  test.db  test_api_endpoints.py  test_cloudflare_integration_complete.py  test_cloudflare_integration_final.py  test_startup.py
oss/automationhub/cloudflare-workers/: deploy.sh  package.json  wrangler-simple.toml  wrangler.toml
oss/automationhub/desktop-app/: SETUP.md  START_GUIDE.md  build_backend.py  index.html  package-lock.json  package-vue.json  package.json  tailwind.config.js  test_all_functionality.cjs  test_backend.py  test_cloud_deployment.py  vite.config.ts
oss/automationhub/docs/: DEPLOYMENT.md  INTEGRATION_OPENCLAW_OPENHANDS.md  README.md
oss/automationhub/examples/: 01_browser_automation.py  02_conversational_ai.py  README.md  RUN_ALL_EXAMPLES.sh  complete_automation_examples.py  price_monitoring_results.json  real_world_ecommerce.py
oss/automationhub/frontend/: Dockerfile.dev  nginx.conf  package-lock.json  package.json  tsconfig.json
oss/automationhub/mcp-servers/: .env.example  claude-desktop-config.json  cloudflare-mcp-server.py  requirements.txt  setup-cloudflare-mcp.sh  simple_test.py  test_connection.py
oss/automationhub/migrations/: 001_create_analytics_tables.sql  002_sample_data.sql
oss/automationhub/scripts/: build-and-publish-extension.sh  deploy.sh  health-monitor.sh  run_automated_checks.sh  setup-d1.sh  setup-subdomain-dns.sh  setup-wrangler.sh  start-dev.sh  start-production.sh  test-cloudflare-api.py  test-cloudflare-production.sh  test-cloudflare-wrangler.sh  upm-manager.sh  verify-production-ready.sh  wrangler-deploy.sh
oss/automationhub/src/: __init__.py  api-worker.js  path-based-worker.js  router-worker.js  simple-path-worker.js  standalone-worker.js  upm-plus-gateway-worker.js
oss/automationhub/terraform/: main.tf  variables.tf
oss/automationhub/tests/: conftest.py  test_actions.py  test_api.py  test_collaboration_framework.py  test_document_processing_core.py  test_document_processor.py  test_document_processor_simple.py  test_scheduler.py  test_triggers.py  test_workflow_executor.py  test_workflow_templates.py  test_workflows.py
oss/clawpipe/python-sdk/: README.md  pyproject.toml
oss/clawpipe/rust-sdk/: Cargo.toml  LICENSE  README.md
oss/clawpipe/server/: .dockerignore  .env.example  .gitignore  AI_AGENT_NEXT_TASK.md  AI_AGENT_TODAY.md  AI_WORKDAY_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERABLES.md  DELIVERABLES_INDEX.md  Dockerfile  Dockerfile.prod  INSTALL.md  MANIFEST.in  Makefile  PRODUCTION_READINESS.md  PRODUCTION_READINESS_REPORT.md  QA_REPORT.md  README.md  SECURITY.md  SPRINTS.md  SPRINTS_ALL_PRODUCTS_2026.md  SPRINT_PLAN.md  SPRINT_PLAN_ALL_PRODUCTS_2026.md  SPRINT_PLAN_V2.md  SPRINT_SUMMARY_2026.md  __init__.py  build_macos_app.sh  deploy.sh  deploy_production.sh  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  inspect_line_102.py  install.sh  install_lm_studio_extension.sh  main.py  package.json  (+19 more)
oss/mcp-tooling/upm/: .gitignore  AI_AGENT_NEXT_TASK.md  AI_AGENT_TODAY.md  AI_DEVELOPMENT_INSTRUCTIONS.md  AI_WORKDAY_PLAN.md  AUTOMATION_STATUS.md  CLAUDE.md  CLOUDFLARE_DEPLOYMENT_GUIDE.md  CLOUDFLARE_DEPLOYMENT_READY.md  CLOUDFLARE_PAGES_SETUP.md  CLOUD_NATIVE_ENHANCEMENTS_SUMMARY.md  COMPREHENSIVE_TESTING_SUMMARY.md  CROSS_LANGUAGE_DEPENDENCY_VISION.md  DEVELOPER_EXAMPLE_WORKFLOW.md  DEVELOPER_WORKFLOW_GUIDE.md  DEVELOPMENT_TODO.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.cloud  Dockerfile.upm  ENHANCED_FEATURES_SUMMARY.md  FINAL_DEPLOYMENT_STATUS.md  HOW_TO_USE_UPM.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE_ROBUST_CODE.md  INTERACTIVE_VISUALIZATION_SUMMARY.md  LICENSE  (+80 more)
products/finsavvy-cluster/: .gitignore  CLAUDE.md  CLOUDFLARE_DEPLOY.md  CONSOLIDATION_TODO.md  LICENSE  MIGRATION_NOTES.md  README.md  README.source.md  TEST_RESULTS.md  __init__.py  cli_test_results_20251120_232938.json  finsavvyai  mobile_access_test.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_cli_comprehensive.py  test_complete.py
(+23523 files in other folders)
