[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automationhub"
version = "1.0.1"
description = "Lightweight Python workflow automation primitives."
readme = "README.md"
license = "MIT"
authors = [{ name = "AutomationHub Team" }]
requires-python = ">=3.10"
keywords = ["workflow", "automation", "scheduler", "triggers", "library"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "build>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/your-org/automationhub"
Repository = "https://github.com/your-org/automationhub"
Issues = "https://github.com/your-org/automationhub/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/automationhub --cov-report=term-missing --cov-fail-under=95"
asyncio_mode = "auto"
