# FinSavvyAI - Professional AWS-Style Distributed AI Cluster

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsavvyai"
version = "1.0.0"
description = "Professional AWS-Style Distributed AI Cluster"
readme = "docs/README.md"
license = {file = "LICENSE"}
authors = [
    {name = "FinSavvyAI Team", email = "support@finsavvyai.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
keywords = ["ai", "llm", "distributed", "cluster", "aws-cli"]
requires-python = ">=3.8"

dependencies = [
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.1",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "huggingface-hub>=0.19.0",
    "accelerate>=0.24.0",
]

[project.optional-dependencies]
vision = [
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]
all = [
    "finsavvyai[vision,dev]"
]

[project.scripts]
finsavvyai = "main:main"
fs = "main:main"

[project.urls]
Homepage = "https://github.com/finsavvyai/finsavvyai-cluster"
Documentation = "https://github.com/finsavvyai/finsavvyai-cluster/docs"
Repository = "https://github.com/finsavvyai/finsavvyai-cluster.git"
"Bug Tracker" = "https://github.com/finsavvyai/finsavvyai-cluster/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config"
