[project]
name = "clawpipe-ai"
version = "3.0.0"
description = "The intelligent AI pipeline. Cut LLM costs 30-50%."
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "pydantic>=2.0"]
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clawpipe"]
