[package]
name = "clawpipe-ai"
version = "3.0.0"
edition = "2021"
description = "The intelligent AI pipeline. Cut LLM costs 30-50%."
license = "MIT"
repository = "https://github.com/finsavvyai/clawpipe"
homepage = "https://clawpipe.ai"
authors = ["ClawPipe Team <info@finsavvyai.com>"]
readme = "README.md"
keywords = ["ai", "llm", "pipeline", "cache", "router"]
categories = ["api-bindings", "caching"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
regex = "1"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
