# FinSavvyAI - Professional AWS-Style Distributed AI Cluster

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsavvyai"
version = "1.0.0"
description = "Professional AWS-Style Distributed AI Cluster"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "FinSavvyAI Team", email = "support@finsavvyai.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
keywords = ["ai", "llm", "distributed", "cluster", "openai-compatible", "self-hosted", "gateway"]
requires-python = ">=3.11"

dependencies = [
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.1",
    "httpx>=0.25.0",
    "bcrypt>=4.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.0.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
vision = [
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
]
local = [
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "huggingface-hub>=0.19.0",
    "accelerate>=0.24.0",
]
cloud = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.28.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pip-audit>=2.6.0",
    "ruff>=0.1.0",
    "bandit>=1.7.5",
]
all = [
    "finsavvyai[vision,local,cloud,dev]"
]

[project.scripts]
finsavvyai = "main:main"
fs = "main:main"

[project.urls]
Homepage = "https://github.com/finsavvyai/finsavvyai"
Documentation = "https://github.com/finsavvyai/finsavvyai/tree/main/docs"
Repository = "https://github.com/finsavvyai/finsavvyai.git"
"Bug Tracker" = "https://github.com/finsavvyai/finsavvyai/issues"
Changelog = "https://github.com/finsavvyai/finsavvyai/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --cov=src --cov-report=term-missing --cov-fail-under=95"
markers = [
    "integration: tests that require live services (master/worker running)",
    "production: production load and stress tests",
    "unit: unit tests with no external dependencies",
]
asyncio_mode = "auto"
