[project]
name = "qestro-orchestrator"
version = "0.1.0"
description = "AI Orchestration System for Qestro - One command, full features"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.28.0",
    "crewai-tools>=0.2.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.0",
]

[project.scripts]
qestro-ai = "orchestrator.main:app"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
