[package]
name = "upm-plus"
version = "0.1.0"
description = "UPM.Plus - Autonomous Digital Ecosystem Orchestrator"
authors = ["UPM.Plus Team"]
license = "MIT"
repository = "https://github.com/your-org/upm-plus"
edition = "2021"

# Tauri build configuration
[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri core with essential features
tauri = { version = "1.5", features = [ "window-set-always-on-top", "window-set-closable", "window-set-position", "window-set-skip-taskbar", "window-request-user-attention", "updater", "window-set-max-size", "notification-all", "fs-copy-file", "window-unminimize", "window-set-min-size", "process-relaunch", "window-set-decorations", "fs-remove-dir", "fs-create-dir", "window-print", "window-set-cursor-visible", "process-exit", "window-unmaximize", "window-set-icon", "fs-exists", "window-start-dragging", "window-set-fullscreen", "window-set-focus", "window-set-cursor-grab",
    "window-center",
    "window-create",
    "window-set-size",
    "window-hide",
    "window-show",
    "window-maximize",
    "window-minimize",
    "window-close",
    "window-set-title",
    "window-set-resizable",
    "fs-read-file",
    "fs-write-file",
    "path-all",
    "shell-open"
] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[features]
# This feature is used for production builds
default = ["custom-protocol"]
# The `custom-protocol` feature is only enabled by default during development
custom-protocol = ["tauri/custom-protocol"]
