[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawpipe-langchain"
version = "0.1.0"
description = "LangChain integration for ClawPipe — intelligent LLM cost optimization pipeline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ClawPipe", email = "info@clawpipe.ai" },
]
keywords = ["langchain", "llm", "clawpipe", "ai", "cost-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.2",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://clawpipe.ai"
Repository = "https://github.com/clawpipe/clawpipe-langchain"
Documentation = "https://docs.clawpipe.ai/integrations/langchain"
