[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amliq"
version = "1.0.0"
description = "AMLIQ — AML/CFT Sanctions Screening SDK"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.28",
    "ruff>=0.1",
]
