[package]
name = "agent-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
agent-runtime = { path = "../runtime" }
agent-tools = { path = "../tools" }
async-stream = "0.3"
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toolpack-pushci = { path = "../toolpack-pushci" }
uuid.workspace = true
