[package]
name = "vector-core"
version = "1.0.0"
edition = "2021"
authors = ["SDLC.ai Team <team@sdlc.cc>"]
description = "Vector core service for SDLC.ai platform"
license = "BUSL-1.1"
repository = "https://github.com/sdlc-ai/platform"
homepage = "https://sdlc.cc"

[dependencies]
# Web Framework
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "compression-gzip"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
pgvector = { version = "0.3", features = ["sqlx"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Authentication & Security
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# AI/ML
# candle-* removed: never imported in src/ and the 0.3.x line no longer
# compiles on Rust 1.80+. Add back if/when vector-core does on-device
# inference; use candle >=0.8 at that point.
tokenizers = "0.15"

# Configuration & Logging
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }

# Metrics & Monitoring
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
itertools = "0.12"
once_cell = "1.19"
dashmap = "5.5"
regex = "1.10"

# Development Dependencies
[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "embedding_generation"
harness = false

[[bench]]
name = "similarity_search"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
