[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sar-draft"
version = "0.0.1"
description = "AMLIQ Brain — SAR Draft Agent skeleton (FinCEN template library + orchestrator)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "FinsavvyAI", email = "engineering@finsavvyai.com" }]
keywords = ["amliq", "sar", "fincen", "compliance", "agent"]
dependencies = [
    "pydantic>=2.6,<3.0",
    "jinja2>=3.1,<4.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<6.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.8,<2.0",
    "types-PyYAML>=6.0,<7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sar_draft*"]

[tool.setuptools.package-data]
sar_draft = ["templates/*.j2", "templates/*.yaml"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=sar_draft",
    "--cov-branch",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["sar_draft"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
